# cyclops

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md
cmake/: ceres.cmake  ceres.cmake.in  doctest.cmake  doctest.cmake.in  eigen.cmake  eigen.cmake.in  json.cmake  json.cmake.in  range-v3.cmake  range-v3.cmake.in  spdlog.cmake  spdlog.cmake.in
cmake/macro/: cyclops_unittest.cmake
cmake/utils/: options.cmake
src/: CMakeLists.txt
src/cyclops/: CMakeLists.txt  cyclops.cpp  cyclops.hpp
src/cyclops/details/: CMakeLists.txt  config.cpp  config.hpp  logging.cpp  logging.hpp  type.cpp  type.hpp
src/cyclops/details/estimation/: CMakeLists.txt  estimator.cpp  estimator.hpp  optimizer.cpp  optimizer.hpp  optimizer_guess.cpp  optimizer_guess.hpp  propagation.cpp  propagation.hpp  sanity.cpp  sanity.hpp  type.hpp
src/cyclops/details/estimation/ceres/: CMakeLists.txt  cost.gaussian_prior.cpp  cost.gaussian_prior.hpp  cost.gaussian_prior.test.cpp  cost.imu_bias_prior.hpp  cost.imu_bias_walk.hpp  cost.imu_preintegration.cpp  cost.imu_preintegration.hpp  cost.imu_preintegration.test.cpp  cost.landmark.hpp  cost.landmark.test.cpp  manifold.se3.hpp
src/cyclops/details/estimation/graph/: CMakeLists.txt  factor.cpp  factor.hpp  graph.cpp  graph.hpp  graph_cost_helper.cpp  graph_cost_helper.hpp  graph_node_map.cpp  graph_node_map.hpp  node.cpp  node.hpp
src/cyclops/details/estimation/marginalizer/: CMakeLists.txt  marginalizer.cpp  marginalizer.hpp  marginalizer_helper.cpp  marginalizer_helper.hpp
src/cyclops/details/estimation/state/: CMakeLists.txt  accessor.cpp  accessor.hpp  accessor_read.cpp  accessor_read.hpp  accessor_write.cpp  accessor_write.hpp  state_block.cpp  state_block.hpp  state_internal.cpp  state_internal.hpp
src/cyclops/details/initializer/: CMakeLists.txt  initializer.cpp  initializer.hpp  solver.cpp  solver.hpp  vision.cpp  vision.hpp  vision_imu.cpp  vision_imu.hpp
src/cyclops/details/initializer/vision/: CMakeLists.txt  bundle_adjustment.cpp  bundle_adjustment.hpp  bundle_adjustment.test.cpp  bundle_adjustment_factors.cpp  bundle_adjustment_factors.hpp  bundle_adjustment_factors.test.cpp  bundle_adjustment_states.cpp  bundle_adjustment_states.hpp  epipolar.cpp  epipolar.hpp  epipolar.test.cpp  epipolar_refine.cpp  epipolar_refine.hpp  epipolar_refine.test.cpp  epnp.cpp  epnp.hpp  epnp.test.cpp  homography.cpp  homography.hpp  homography.test.cpp  homography_refinement.cpp  homography_refinement.hpp  hypothesis.cpp  hypothesis.hpp  multiview.cpp  multiview.hpp  triangulation.cpp  triangulation.hpp  twoview.cpp  twoview.hpp  twoview_selection.cpp  twoview_selection.hpp  type.hpp
src/cyclops/details/initializer/vision_imu/: CMakeLists.txt  acceptance.cpp  acceptance.hpp  camera_motion_prior.cpp  camera_motion_prior.hpp  camera_motion_prior.test.cpp  rotation.cpp  rotation.hpp  rotation.test.cpp  translation.cpp  translation.hpp  translation.test.cpp  translation_analysis.cpp  translation_analysis.hpp  translation_analysis.test.cpp  translation_cache.cpp  translation_cache.hpp  translation_evaluation.cpp  translation_evaluation.hpp  translation_evaluation.test.cpp  translation_refinement.cpp  translation_refinement.hpp  translation_sample.cpp  translation_sample.hpp  uncertainty.cpp  uncertainty.hpp
src/cyclops/details/measurement/: CMakeLists.txt  data_provider.cpp  data_provider.hpp  data_provider.test.cpp  data_queue.cpp  data_queue.hpp  data_queue.test.cpp  data_updater.cpp  data_updater.hpp  keyframe.cpp  keyframe.hpp  preintegration.cpp  preintegration.hpp  preintegration.ipp  preintegration.test.cpp  type.hpp
src/cyclops/details/telemetry/: CMakeLists.txt  initializer.cpp  initializer.hpp  keyframe.cpp  keyframe.hpp  optimizer.cpp  optimizer.hpp
src/cyclops/details/utils/: CMakeLists.txt  block_meta.hpp  debug.cpp  debug.hpp  debug.ipp  math.cpp  math.hpp  math.test.cpp  qcqp1.cpp  qcqp1.hpp  type.hpp  vision.cpp  vision.hpp  vision.test.cpp
src/tests/: CMakeLists.txt
src/tests/cyclops_tests/: CMakeLists.txt  default.cpp  default.hpp  random.cpp  random.hpp  random.ipp  range.ipp  serialize.cpp  serialize.hpp  signal.cpp  signal.hpp  signal.ipp  state.hpp  trajectory.cpp  trajectory.hpp
src/tests/cyclops_tests/data/: CMakeLists.txt  imu.cpp  imu.hpp  landmark.cpp  landmark.hpp  rotation.cpp  rotation.hpp  typefwd.hpp
src/tests/cyclops_tests/mockups/: CMakeLists.txt  data_provider.cpp  data_provider.hpp  initializer.cpp  initializer.hpp  keyframe_manager.cpp  keyframe_manager.hpp
src/tests/testcases/: CMakeLists.txt  _main.cpp  cyclops.cpp  initializer-imu.cpp  initializer-vision-hypothesis.cpp  initializer-vision-multiview.cpp  initializer-vision-twoview.cpp  initializer-vision.cpp  initializer.cpp  optimizer-guess.cpp  optimizer.cpp
